try fix dot align

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1031,6 +1031,10 @@
         .merge-section {
           background-color: var(--color-box-body);
 
+          .item > .octicon-dot-fill {
+            margin-top: .25rem;
+          }
+
           .item-section {
             display: flex;
             align-items: center;
